[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmaping"
version = "1.1"  # <-- আমরা নতুন করে পুশ দিচ্ছি তাই ভার্সন পরিবর্তন করে 0.1.1 করা হয়েছে
authors = [
    { name="Abu Tanim", email="mrtanvai@gmail.com" },
]
description = "An automation and network scanning utility tool."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "Custom License" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nmap.py"]
